Updated Client, Added additonal sorting and added Update Options
